latest python scripts

--- a/scraper/sql_query_helper-ALL.nbconvert.ipynb
+++ b/scraper/sql_query_helper-ALL.nbconvert.ipynb
@@ -92,9 +92,10 @@
     "    data[\"garage\"] = data[\"garage\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data['date_closed'] = data['date_closed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
     "    data['date_closed'] = data['date_closed'].astype(int)\n",
+    "    data[\"school_district_id\"] = data[\"school_district_id\"].astype(str)\n",
     "    \n",
     "    # convert the area name into dummy variables\n",
-    "    dm = pd.get_dummies(data[['area_name', 'zipcode']], prefix=['area_name','zipcode'])\n",
+    "    dm = pd.get_dummies(data[['area_name', 'zipcode','school_district_id']], prefix=['area_name','zipcode','school_district_id'])\n",
     "    data = pd.concat([data, dm], axis=1)\n",
     "    del dm\n",
     "    \n",
@@ -108,11 +109,15 @@
     "    query = %sql (\\\n",
     "    SELECT  \\\n",
     "    *, \\\n",
-    "    property_transaction_logs.id as 'transaction_id' \\\n",
+    "    properties.id as 'property_id', \\\n",
+    "    property_transaction_logs.id as 'transaction_id', \\\n",
+    "    property_school_districts.school_district_id \\\n",
     "    FROM  \\\n",
-    "    properties, \\\n",
     "    property_transaction_logs, \\\n",
-    "    area_name_zipcodes \\\n",
+    "    area_name_zipcodes, \\\n",
+    "    properties \\\n",
+    "    LEFT JOIN \\\n",
+    "    property_school_districts ON property_school_districts.property_id = properties.id \\\n",
     "    where  \\\n",
     "    ( abnormal = false OR abnormal IS NULL OR abnormal = 0 ) and \\\n",
     "    properties.sqft between 1 and 10000 and \\\n",
@@ -132,9 +137,10 @@
     "    limit :limit) \n",
     "\n",
     "    q = query.DataFrame()\n",
+    "    q = q.loc[:,~q.columns.duplicated()]\n",
     "    q.set_index('property_id', inplace=True)\n",
     "    q.index.name = 'property_id'\n",
-    "    return q.T.groupby(level=0).first().T\n",
+    "    return q\n",
     "\n",
     "def queue_city_queries(city, zipcode_list, for_sale_zipcode_list):\n",
     "    i = query(city=city, zipcode=zipcode_list, limit=limit,ttype = 'sales',tstatus='closed')\n",
@@ -167,8 +173,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1225 rows affected.\n",
-      "1225 rows affected.\n"
+      "1232 rows affected.\n",
+      "1232 rows affected.\n"
      ]
     }
    ],
@@ -195,11 +201,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "226104 rows affected.\n",
-      "11419 rows affected.\n",
-      "61140 rows affected.\n",
-      "Entries before filter:  298663\n",
-      "Entries after filter:  215038\n"
+      "232042 rows affected.\n",
+      "11763 rows affected.\n",
+      "63509 rows affected.\n",
+      "Entries before filter:  307314\n",
+      "Entries after filter:  221298\n"
      ]
     },
     {
@@ -230,6 +236,11 @@
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:42: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     }
@@ -248,274 +259,31 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>address</th>\n",
-       "      <th>adult</th>\n",
-       "      <th>area_name</th>\n",
-       "      <th>bathrooms</th>\n",
-       "      <th>bedrooms</th>\n",
-       "      <th>construction</th>\n",
-       "      <th>date_closed</th>\n",
-       "      <th>date_listed</th>\n",
-       "      <th>date_transacted_latest</th>\n",
-       "      <th>days_on_market</th>\n",
-       "      <th>...</th>\n",
-       "      <th>zipcode_85379</th>\n",
-       "      <th>zipcode_85381</th>\n",
-       "      <th>zipcode_85382</th>\n",
-       "      <th>zipcode_85383</th>\n",
-       "      <th>zipcode_85387</th>\n",
-       "      <th>zipcode_85388</th>\n",
-       "      <th>zipcode_85390</th>\n",
-       "      <th>zipcode_85392</th>\n",
-       "      <th>zipcode_85395</th>\n",
-       "      <th>zipcode_85396</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>property_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7385791</th>\n",
-       "      <td>4747 N 150th Ave, Goodyear, AZ 85395</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6299</td>\n",
-       "      <td>2017-01-11</td>\n",
-       "      <td>2017-03-31</td>\n",
-       "      <td>79</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7385789</th>\n",
-       "      <td>4448 N 151st Dr, Goodyear, AZ 85395</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6333</td>\n",
-       "      <td>2017-05-03</td>\n",
-       "      <td>2017-05-04</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7420324</th>\n",
-       "      <td>4347 N 161st Ln, Goodyear, AZ 85395</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6296</td>\n",
-       "      <td>2017-03-02</td>\n",
-       "      <td>2017-03-28</td>\n",
-       "      <td>26</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7416322</th>\n",
-       "      <td>4312 N 159th Dr, Goodyear, AZ 85395</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6327</td>\n",
-       "      <td>2017-03-22</td>\n",
-       "      <td>2017-04-28</td>\n",
-       "      <td>37</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7437315</th>\n",
-       "      <td>4243 N 150th Dr, Goodyear, AZ 85395</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6355</td>\n",
-       "      <td>2017-04-02</td>\n",
-       "      <td>2017-05-26</td>\n",
-       "      <td>54</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 156 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           address adult area_name bathrooms  \\\n",
-       "property_id                                                                    \n",
-       "7385791      4747 N 150th Ave, Goodyear, AZ 85395    NaN        PH         2   \n",
-       "7385789       4448 N 151st Dr, Goodyear, AZ 85395    NaN        PH         2   \n",
-       "7420324       4347 N 161st Ln, Goodyear, AZ 85395    NaN        PH         2   \n",
-       "7416322       4312 N 159th Dr, Goodyear, AZ 85395    NaN        PH         2   \n",
-       "7437315       4243 N 150th Dr, Goodyear, AZ 85395    NaN        PH         2   \n",
-       "\n",
-       "            bedrooms construction  date_closed date_listed  \\\n",
-       "property_id                                                  \n",
-       "7385791            5          NaN         6299  2017-01-11   \n",
-       "7385789            4          NaN         6333  2017-05-03   \n",
-       "7420324            3          NaN         6296  2017-03-02   \n",
-       "7416322            3          NaN         6327  2017-03-22   \n",
-       "7437315            3          NaN         6355  2017-04-02   \n",
-       "\n",
-       "            date_transacted_latest days_on_market      ...      zipcode_85379  \\\n",
-       "property_id                                            ...                      \n",
-       "7385791                 2017-03-31             79      ...                  0   \n",
-       "7385789                 2017-05-04              1      ...                  0   \n",
-       "7420324                 2017-03-28             26      ...                  0   \n",
-       "7416322                 2017-04-28             37      ...                  0   \n",
-       "7437315                 2017-05-26             54      ...                  0   \n",
-       "\n",
-       "            zipcode_85381 zipcode_85382 zipcode_85383 zipcode_85387  \\\n",
-       "property_id                                                           \n",
-       "7385791                 0             0             0             0   \n",
-       "7385789                 0             0             0             0   \n",
-       "7420324                 0             0             0             0   \n",
-       "7416322                 0             0             0             0   \n",
-       "7437315                 0             0             0             0   \n",
-       "\n",
-       "            zipcode_85388 zipcode_85390 zipcode_85392 zipcode_85395  \\\n",
-       "property_id                                                           \n",
-       "7385791                 0             0             0             1   \n",
-       "7385789                 0             0             0             1   \n",
-       "7420324                 0             0             0             1   \n",
-       "7416322                 0             0             0             1   \n",
-       "7437315                 0             0             0             1   \n",
-       "\n",
-       "            zipcode_85396  \n",
-       "property_id                \n",
-       "7385791                 0  \n",
-       "7385789                 0  \n",
-       "7420324                 0  \n",
-       "7416322                 0  \n",
-       "7437315                 0  \n",
-       "\n",
-       "[5 rows x 156 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q['sales'].head()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11091"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(q['for_sale'].index)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
