--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -2,27 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -145,9 +137,10 @@
     "    limit :limit) \n",
     "\n",
     "    q = query.DataFrame()\n",
+    "    q = q.loc[:,~q.columns.duplicated()]\n",
     "    q.set_index('property_id', inplace=True)\n",
     "    q.index.name = 'property_id'\n",
-    "    return q.T.groupby(level=0).first().T\n",
+    "    return q\n",
     "\n",
     "def queue_city_queries(city, zipcode_list, for_sale_zipcode_list):\n",
     "    i = query(city=city, zipcode=zipcode_list, limit=limit,ttype = 'sales',tstatus='closed')\n",
@@ -171,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -180,8 +173,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1224 rows affected.\n",
-      "1224 rows affected.\n"
+      "1230 rows affected.\n",
+      "1230 rows affected.\n"
      ]
     }
    ],
@@ -198,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -208,11 +201,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "229150 rows affected.\n",
-      "11468 rows affected.\n",
-      "61367 rows affected.\n",
-      "Entries before filter:  301985\n",
-      "Entries after filter:  218113\n"
+      "231872 rows affected.\n",
+      "11741 rows affected.\n",
+      "63074 rows affected.\n",
+      "Entries before filter:  306687\n",
+      "Entries after filter:  221095\n"
      ]
     },
     {
@@ -258,282 +251,6 @@
     "for k,v in q.items():\n",
     "    v.to_csv('CSV_backups/ALL-' + k + '.csv')\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>address</th>\n",
-       "      <th>adult</th>\n",
-       "      <th>area_name</th>\n",
-       "      <th>bathrooms</th>\n",
-       "      <th>bedrooms</th>\n",
-       "      <th>construction</th>\n",
-       "      <th>date_closed</th>\n",
-       "      <th>date_listed</th>\n",
-       "      <th>date_transacted_latest</th>\n",
-       "      <th>days_on_market</th>\n",
-       "      <th>...</th>\n",
-       "      <th>school_district_id_68.0</th>\n",
-       "      <th>school_district_id_75.0</th>\n",
-       "      <th>school_district_id_76.0</th>\n",
-       "      <th>school_district_id_8.0</th>\n",
-       "      <th>school_district_id_87.0</th>\n",
-       "      <th>school_district_id_90.0</th>\n",
-       "      <th>school_district_id_93.0</th>\n",
-       "      <th>school_district_id_95.0</th>\n",
-       "      <th>school_district_id_96.0</th>\n",
-       "      <th>school_district_id_nan</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>property_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8962921.0</th>\n",
-       "      <td>15036 W Ventura St, Surprise, AZ 85379</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4546</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2012-06-12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8962921.0</th>\n",
-       "      <td>15149 W Alexandria Way, Surprise, AZ 85379</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4554</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2012-06-20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8962921.0</th>\n",
-       "      <td>14757 W Laurel Ln, Surprise, AZ 85379</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3833</td>\n",
-       "      <td>2010-04-18</td>\n",
-       "      <td>2010-06-30</td>\n",
-       "      <td>73</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8962920.0</th>\n",
-       "      <td>14263 W Dahlia Dr, Surprise, AZ 85379</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4447</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2012-03-05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8962920.0</th>\n",
-       "      <td>13386 W Mauna Loa Ln, Surprise, AZ 85379</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2005-06-22</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 220 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 address adult area_name  \\\n",
-       "property_id                                                                \n",
-       "8962921.0        15036 W Ventura St, Surprise, AZ 85379    NaN        PH   \n",
-       "8962921.0    15149 W Alexandria Way, Surprise, AZ 85379    NaN        PH   \n",
-       "8962921.0         14757 W Laurel Ln, Surprise, AZ 85379    NaN        PH   \n",
-       "8962920.0         14263 W Dahlia Dr, Surprise, AZ 85379    NaN        PH   \n",
-       "8962920.0      13386 W Mauna Loa Ln, Surprise, AZ 85379    NaN        PH   \n",
-       "\n",
-       "            bathrooms bedrooms construction  date_closed date_listed  \\\n",
-       "property_id                                                            \n",
-       "8962921.0           1        2          NaN         4546        None   \n",
-       "8962921.0           2        3          NaN         4554        None   \n",
-       "8962921.0           2        4          NaN         3833  2010-04-18   \n",
-       "8962920.0           2        4          NaN         4447        None   \n",
-       "8962920.0           2        3          NaN         1999        None   \n",
-       "\n",
-       "            date_transacted_latest days_on_market          ...            \\\n",
-       "property_id                                                ...             \n",
-       "8962921.0               2012-06-12            NaN          ...             \n",
-       "8962921.0               2012-06-20            NaN          ...             \n",
-       "8962921.0               2010-06-30             73          ...             \n",
-       "8962920.0               2012-03-05            NaN          ...             \n",
-       "8962920.0               2005-06-22            NaN          ...             \n",
-       "\n",
-       "            school_district_id_68.0 school_district_id_75.0  \\\n",
-       "property_id                                                   \n",
-       "8962921.0                         0                       0   \n",
-       "8962921.0                         0                       0   \n",
-       "8962921.0                         0                       0   \n",
-       "8962920.0                         0                       0   \n",
-       "8962920.0                         0                       0   \n",
-       "\n",
-       "            school_district_id_76.0 school_district_id_8.0  \\\n",
-       "property_id                                                  \n",
-       "8962921.0                         0                      0   \n",
-       "8962921.0                         0                      0   \n",
-       "8962921.0                         0                      0   \n",
-       "8962920.0                         0                      0   \n",
-       "8962920.0                         0                      0   \n",
-       "\n",
-       "            school_district_id_87.0 school_district_id_90.0  \\\n",
-       "property_id                                                   \n",
-       "8962921.0                         0                       0   \n",
-       "8962921.0                         0                       0   \n",
-       "8962921.0                         0                       0   \n",
-       "8962920.0                         0                       0   \n",
-       "8962920.0                         0                       0   \n",
-       "\n",
-       "            school_district_id_93.0 school_district_id_95.0  \\\n",
-       "property_id                                                   \n",
-       "8962921.0                         0                       0   \n",
-       "8962921.0                         0                       0   \n",
-       "8962921.0                         0                       0   \n",
-       "8962920.0                         0                       0   \n",
-       "8962920.0                         0                       0   \n",
-       "\n",
-       "            school_district_id_96.0 school_district_id_nan  \n",
-       "property_id                                                 \n",
-       "8962921.0                         0                      0  \n",
-       "8962921.0                         0                      0  \n",
-       "8962921.0                         0                      0  \n",
-       "8962920.0                         0                      0  \n",
-       "8962920.0                         0                      0  \n",
-       "\n",
-       "[5 rows x 220 columns]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q['sales'].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "len(q['for_sale'].index)"
    ]
   },
   {
