--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -131,11 +139,19 @@
     "    properties.`id` = property_transaction_logs.`property_id` and \\\n",
     "    property_transaction_logs.`transaction_type` = :ttype and \\\n",
     "    property_transaction_logs.`transaction_status` = :tstatus and \\\n",
-    "    property_transaction_logs.`is_latest` = true \\\n",
+    "    property_transaction_logs.`is_latest` = true and \\\n",
+    "    (properties.fixer is Null or properties.fixer = False) and \\\n",
+    "    (properties.townhouse is Null or properties.townhouse = False) and \\\n",
+    "    (properties.foreclosure is Null or properties.foreclosure = False) and \\\n",
+    "    (properties.adult is Null or properties.adult = False) and \\\n",
+    "    (properties.construction is Null or properties.construction = False) and \\\n",
+    "    (properties.mobile is Null or properties.mobile = False) \\\n",
     "    order by \\\n",
     "    property_transaction_logs.id desc \\\n",
     "    limit :limit) \n",
     "\n",
+    "#     properties.townhome != True and \\\n",
+    "    \n",
     "    q = query.DataFrame()\n",
     "    q = q.loc[:,~q.columns.duplicated()]\n",
     "    q.set_index('property_id', inplace=True)\n",
@@ -164,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -173,8 +189,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1230 rows affected.\n",
-      "1230 rows affected.\n"
+      "1249 rows affected.\n",
+      "1249 rows affected.\n"
      ]
     }
    ],
@@ -191,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -201,11 +217,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "231872 rows affected.\n",
-      "11741 rows affected.\n",
-      "63074 rows affected.\n",
-      "Entries before filter:  306687\n",
-      "Entries after filter:  221095\n"
+      "231881 rows affected.\n",
+      "12567 rows affected.\n",
+      "64229 rows affected.\n",
+      "Entries before filter:  308677\n",
+      "Entries after filter:  221994\n"
      ]
     },
     {
@@ -252,6 +268,15 @@
     "    v.to_csv('CSV_backups/ALL-' + k + '.csv')\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
