--- a/scraper/sql_query_helper-ALL.nbconvert.ipynb
+++ b/scraper/sql_query_helper-ALL.nbconvert.ipynb
@@ -131,11 +131,19 @@
     "    properties.`id` = property_transaction_logs.`property_id` and \\\n",
     "    property_transaction_logs.`transaction_type` = :ttype and \\\n",
     "    property_transaction_logs.`transaction_status` = :tstatus and \\\n",
-    "    property_transaction_logs.`is_latest` = true \\\n",
+    "    property_transaction_logs.`is_latest` = true and \\\n",
+    "    (properties.fixer is Null or properties.fixer = False) and \\\n",
+    "    (properties.townhouse is Null or properties.townhouse = False) and \\\n",
+    "    (properties.foreclosure is Null or properties.foreclosure = False) and \\\n",
+    "    (properties.adult is Null or properties.adult = False) and \\\n",
+    "    (properties.construction is Null or properties.construction = False) and \\\n",
+    "    (properties.mobile is Null or properties.mobile = False) \\\n",
     "    order by \\\n",
     "    property_transaction_logs.id desc \\\n",
     "    limit :limit) \n",
     "\n",
+    "#     properties.townhome != True and \\\n",
+    "    \n",
     "    q = query.DataFrame()\n",
     "    q = q.loc[:,~q.columns.duplicated()]\n",
     "    q.set_index('property_id', inplace=True)\n",
@@ -173,8 +181,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1232 rows affected.\n",
-      "1232 rows affected.\n"
+      "1305 rows affected.\n",
+      "1305 rows affected.\n"
      ]
     }
    ],
@@ -201,11 +209,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "232042 rows affected.\n",
-      "11763 rows affected.\n",
-      "63509 rows affected.\n",
-      "Entries before filter:  307314\n",
-      "Entries after filter:  221298\n"
+      "231969 rows affected.\n",
+      "14297 rows affected.\n",
+      "63789 rows affected.\n",
+      "Entries before filter:  310055\n",
+      "Entries after filter:  223818\n"
      ]
     },
     {
@@ -252,25 +260,6 @@
     "    v.to_csv('CSV_backups/ALL-' + k + '.csv')\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
