--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -57,12 +65,12 @@
     "\n",
     "def city_query():\n",
     "    query = %sql (\\\n",
-    "    SELECT area_name, COUNT(id) \\\n",
-    "    FROM area_name_zipcodes \\\n",
-    "    GROUP BY area_name \\\n",
+    "    SELECT city_code, COUNT(id) \\\n",
+    "    FROM property_transaction_logs \\\n",
+    "    GROUP BY city_code \\\n",
     "    ORDER BY 2 DESC \\\n",
     "    limit 100)\n",
-    "    return query.DataFrame().area_name.values\n",
+    "    return query.DataFrame().city_code.values\n",
     "\n",
     "def sanitize(data, zipcode_list = None):\n",
     "    # abort if the city has no top zipcodes\n",
@@ -95,7 +103,7 @@
     "    data[\"school_district_id\"] = data[\"school_district_id\"].astype(str)\n",
     "    \n",
     "    # convert the area name into dummy variables\n",
-    "    dm = pd.get_dummies(data[['area_name', 'zipcode','school_district_id']], prefix=['area_name','zipcode','school_district_id'])\n",
+    "    dm = pd.get_dummies(data[['city_code', 'zipcode','school_district_id']], prefix=['city_code','zipcode','school_district_id'])\n",
     "    data = pd.concat([data, dm], axis=1)\n",
     "    del dm\n",
     "    \n",
@@ -114,7 +122,6 @@
     "    property_school_districts.school_district_id \\\n",
     "    FROM  \\\n",
     "    property_transaction_logs, \\\n",
-    "    area_name_zipcodes, \\\n",
     "    properties \\\n",
     "    LEFT JOIN \\\n",
     "    property_school_districts ON property_school_districts.property_id = properties.id \\\n",
@@ -125,12 +132,11 @@
     "    properties.bedrooms <= 6 and \\\n",
     "    properties.bathrooms <= 6 and \\\n",
     "    properties.home_type = 'sfh' and \\\n",
-    "    properties.latitude BETWEEN 33.282668 AND 33.665268 and \\\n",
-    "    properties.longitude BETWEEN -112.274780 AND -111.810608 and \\\n",
-    "    area_name_zipcodes.`area_name` LIKE :city and \\\n",
-    "    area_name_zipcodes.`zipcode` = properties.`zipcode` and     \\\n",
+    "    ((properties.latitude BETWEEN 33.282668 AND 33.665268 and \\\n",
+    "    properties.longitude BETWEEN -112.274780 AND -111.810608 ) OR ( properties.zipcode IN ('85375', '85142', '85143', '85326', '85249', '85234', '85225', '85086', '85041', '85204', '85205', '85209', '85295', '85037', '85233', '85286', '85248', '85331', '85226', '85224', '85048', '85022', '85251', '85298', '85018', '85029', '85138', '85051', '85254', '85302', '85297', '85020', '85255', '85323', '85016', '85335', '85388', '85373', '85202', '85027', '85706', '85035', '85257', '85023', '85043', '85203', '85304', '85303', '85212', '85301', '85392', '85206', '85044', '85053', '85712', '85262', '85374', '85250', '85396', '85015', '85215', '85028', '85021', '85210', '85050', '85306', '85118', '85310', '85253', '85704', '85711', '85296', '85024', '85040', '85017', '85085', '85383', '85009', '85008', '85031', '85019', '85382', '85139', '85006', '85213', '85353', '85013', '85033', '85339', '85258', '85207', '85266', '85340', '85705', '85308', '85351', '85355', '85305', '85007', '85379', '85087', '85390', '85395', '85338', '85757', '85378', '85208', '85345', '85260', '85307', '85045', '85282', '85268', '85032', '85003', '85012', '85263', '85281', '85042', '85054', '85259', '85377', '85283', '85321', '85363', '85083', '85719', '85201', '85701', '85014', '85381', '85004', '85747', '85716', '85387', '85710', '85140') ) ) and \\\n",
     "    properties.zipcode IN :placeholders and \\\n",
     "    properties.`id` = property_transaction_logs.`property_id` and \\\n",
+    "    property_transaction_logs.`city_code` = :city and \\\n",
     "    property_transaction_logs.`transaction_type` = :ttype and \\\n",
     "    property_transaction_logs.`transaction_status` = :tstatus and \\\n",
     "    property_transaction_logs.`is_latest` = true and \\\n",
@@ -153,9 +159,8 @@
     "def queue_city_queries(city, zipcode_list, for_sale_zipcode_list):\n",
     "    i = query(city=city, zipcode=zipcode_list, limit=limit,ttype = 'sales',tstatus='closed')\n",
     "    j = query(city=city, zipcode=for_sale_zipcode_list, limit=limit,ttype = 'sales',tstatus='open') \n",
-    "    k = query(city=city, zipcode=zipcode_list, limit=limit,ttype = 'rental',tstatus='closed')\n",
     "    \n",
-    "    q = pd.concat([i,j,k])\n",
+    "    q = pd.concat([i,j])\n",
     "    q = sanitize(q)\n",
     "    \n",
     "    for_sale = q[(q.transaction_type == \"sales\") & \n",
@@ -163,16 +168,15 @@
     "                 (q.date_listed > (today - dt.timedelta(days=6000))) &\n",
     "                 (q.zipcode.isin(for_sale_zipcode_list))]\n",
     "    sales = q[(q.transaction_type == \"sales\") & (q.transaction_status == \"closed\")]\n",
-    "    rent = q[(q.transaction_type == \"rental\") & (q.transaction_status == \"closed\")]\n",
     "        \n",
-    "    data = {'sales': sales, 'rentals': rent, 'for_sale': for_sale }\n",
+    "    data = {'sales': sales, 'for_sale': for_sale }\n",
     "    \n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -181,8 +185,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1841 rows affected.\n",
-      "1841 rows affected.\n"
+      "1845 rows affected.\n",
+      "1845 rows affected.\n"
      ]
     }
    ],
@@ -199,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -209,11 +213,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140467 rows affected.\n",
-      "8665 rows affected.\n",
-      "24585 rows affected.\n",
-      "Entries before filter:  173717\n",
-      "Entries after filter:  129762\n"
+      "110329 rows affected.\n",
+      "17922 rows affected.\n",
+      "Entries before filter:  128251\n",
+      "Entries after filter:  123585\n"
      ]
     },
     {
@@ -263,12 +266,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "670 rows affected.\n",
+      "['85375', '85142', '85143', '85326', '85249', '85234', '85225', '85086', '85041', '85204', '85205', '85209', '85295', '85037', '85233', '85286', '85248', '85331', '85226', '85224', '85048', '85022', '85251', '85298', '85018', '85029', '85138', '85051', '85254', '85302', '85297', '85020', '85255', '85323', '85016', '85335', '85388', '85373', '85202', '85027', '85706', '85035', '85257', '85023', '85043', '85203', '85304', '85303', '85212', '85301', '85392', '85206', '85044', '85053', '85712', '85262', '85374', '85250', '85396', '85015', '85215', '85028', '85021', '85210', '85050', '85306', '85118', '85310', '85253', '85704', '85711', '85296', '85024', '85040', '85017', '85085', '85383', '85009', '85008', '85031', '85019', '85382', '85139', '85006', '85213', '85353', '85013', '85033', '85339', '85258', '85207', '85266', '85340', '85705', '85308', '85351', '85355', '85305', '85007', '85379', '85087', '85390', '85395', '85338', '85757', '85378', '85208', '85345', '85260', '85307', '85045', '85282', '85268', '85032', '85003', '85012', '85263', '85281', '85042', '85054', '85259', '85377', '85283', '85321', '85363', '85083', '85719', '85201', '85701', '85014', '85381', '85004', '85747', '85716', '85387', '85710', '85140']\n"
+     ]
+    }
+   ],
+   "source": [
+    "zipcode_list = top_zipcodes(670)\n",
+    "phoenix_zips = list(filter(lambda x: x.startswith('85'), zipcode_list))\n",
+    "print(phoenix_zips)"
+   ]
   },
   {
    "cell_type": "code",
