--- a/scraper/sql_query_helper-ALL.nbconvert.ipynb
+++ b/scraper/sql_query_helper-ALL.nbconvert.ipynb
@@ -57,12 +57,12 @@
     "\n",
     "def city_query():\n",
     "    query = %sql (\\\n",
-    "    SELECT area_name, COUNT(id) \\\n",
-    "    FROM area_name_zipcodes \\\n",
-    "    GROUP BY area_name \\\n",
+    "    SELECT city_code, COUNT(id) \\\n",
+    "    FROM property_transaction_logs \\\n",
+    "    GROUP BY city_code \\\n",
     "    ORDER BY 2 DESC \\\n",
     "    limit 100)\n",
-    "    return query.DataFrame().area_name.values\n",
+    "    return query.DataFrame().city_code.values\n",
     "\n",
     "def sanitize(data, zipcode_list = None):\n",
     "    # abort if the city has no top zipcodes\n",
@@ -95,7 +95,7 @@
     "    data[\"school_district_id\"] = data[\"school_district_id\"].astype(str)\n",
     "    \n",
     "    # convert the area name into dummy variables\n",
-    "    dm = pd.get_dummies(data[['area_name', 'zipcode','school_district_id']], prefix=['area_name','zipcode','school_district_id'])\n",
+    "    dm = pd.get_dummies(data[['city_code', 'zipcode','school_district_id']], prefix=['city_code','zipcode','school_district_id'])\n",
     "    data = pd.concat([data, dm], axis=1)\n",
     "    del dm\n",
     "    \n",
@@ -114,7 +114,6 @@
     "    property_school_districts.school_district_id \\\n",
     "    FROM  \\\n",
     "    property_transaction_logs, \\\n",
-    "    area_name_zipcodes, \\\n",
     "    properties \\\n",
     "    LEFT JOIN \\\n",
     "    property_school_districts ON property_school_districts.property_id = properties.id \\\n",
@@ -127,10 +126,9 @@
     "    properties.home_type = 'sfh' and \\\n",
     "    properties.latitude BETWEEN 33.282668 AND 33.665268 and \\\n",
     "    properties.longitude BETWEEN -112.274780 AND -111.810608 and \\\n",
-    "    area_name_zipcodes.`area_name` LIKE :city and \\\n",
-    "    area_name_zipcodes.`zipcode` = properties.`zipcode` and     \\\n",
     "    properties.zipcode IN :placeholders and \\\n",
     "    properties.`id` = property_transaction_logs.`property_id` and \\\n",
+    "    property_transaction_logs.`city_code` = :city and \\\n",
     "    property_transaction_logs.`transaction_type` = :ttype and \\\n",
     "    property_transaction_logs.`transaction_status` = :tstatus and \\\n",
     "    property_transaction_logs.`is_latest` = true and \\\n",
@@ -153,9 +151,8 @@
     "def queue_city_queries(city, zipcode_list, for_sale_zipcode_list):\n",
     "    i = query(city=city, zipcode=zipcode_list, limit=limit,ttype = 'sales',tstatus='closed')\n",
     "    j = query(city=city, zipcode=for_sale_zipcode_list, limit=limit,ttype = 'sales',tstatus='open') \n",
-    "    k = query(city=city, zipcode=zipcode_list, limit=limit,ttype = 'rental',tstatus='closed')\n",
     "    \n",
-    "    q = pd.concat([i,j,k])\n",
+    "    q = pd.concat([i,j])\n",
     "    q = sanitize(q)\n",
     "    \n",
     "    for_sale = q[(q.transaction_type == \"sales\") & \n",
@@ -163,9 +160,8 @@
     "                 (q.date_listed > (today - dt.timedelta(days=6000))) &\n",
     "                 (q.zipcode.isin(for_sale_zipcode_list))]\n",
     "    sales = q[(q.transaction_type == \"sales\") & (q.transaction_status == \"closed\")]\n",
-    "    rent = q[(q.transaction_type == \"rental\") & (q.transaction_status == \"closed\")]\n",
     "        \n",
-    "    data = {'sales': sales, 'rentals': rent, 'for_sale': for_sale }\n",
+    "    data = {'sales': sales, 'for_sale': for_sale }\n",
     "    \n",
     "    return data"
    ]
@@ -181,8 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1844 rows affected.\n",
-      "1844 rows affected.\n"
+      "1845 rows affected.\n",
+      "1845 rows affected.\n"
      ]
     }
    ],
@@ -209,11 +205,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19898 rows affected.\n",
-      "9177 rows affected.\n",
-      "24866 rows affected.\n",
-      "Entries before filter:  53941\n",
-      "Entries after filter:  27923\n"
+      "51859 rows affected.\n",
+      "5456 rows affected.\n",
+      "Entries before filter:  57315\n",
+      "Entries after filter:  53503\n"
      ]
     },
     {
