--- a/scraper/backtest_all_models.ipynb
+++ b/scraper/backtest_all_models.ipynb
@@ -448,7 +448,7 @@
     "    try:\n",
     "        prior_target_list = pd.read_csv(csv_path + 'good_sell/gs_target_list_' + (today-dt.timedelta(days=lag_days)) \\\n",
     "                                    .strftime('%Y%m%d') + '.csv', index_col = [0,1]) \\\n",
-    "                                    .rename(columns = { 'ypred' : 'good_sell_prob'})\n",
+    "                                    .rename(columns = { 'bayesian' : 'good_sell_prob'})\n",
     "\n",
     "        backtest = prior_target_list.join(closed[['price']], how=\"inner\").sort_values(by='good_sell_prob',ascending=False)\n",
     "        backtest['good_sell'] = (backtest.price >= (backtest.list * (1-discount)))\n",
