--- a/scraper/predict_sale_above_list.ipynb
+++ b/scraper/predict_sale_above_list.ipynb
@@ -587,7 +587,27 @@
       "\n",
       "Will train until eval-error hasn't improved in 100 rounds.\n",
       "[50]\ttrain-error:0.016286\teval-error:0.016579\n",
-      "[100]\ttrain-error:0.016464\teval-error:0.016649\n"
+      "[100]\ttrain-error:0.016464\teval-error:0.016649\n",
+      "[150]\ttrain-error:0.016132\teval-error:0.016288\n",
+      "[200]\ttrain-error:0.015564\teval-error:0.015912\n",
+      "[250]\ttrain-error:0.014871\teval-error:0.015339\n",
+      "[300]\ttrain-error:0.01433\teval-error:0.01468\n",
+      "[350]\ttrain-error:0.013877\teval-error:0.014452\n",
+      "[400]\ttrain-error:0.013692\teval-error:0.014264\n",
+      "[450]\ttrain-error:0.013493\teval-error:0.014178\n",
+      "[500]\ttrain-error:0.013148\teval-error:0.013919\n",
+      "[550]\ttrain-error:0.012923\teval-error:0.013872\n",
+      "[600]\ttrain-error:0.012666\teval-error:0.013888\n",
+      "[650]\ttrain-error:0.01247\teval-error:0.013809\n",
+      "[700]\ttrain-error:0.012269\teval-error:0.013707\n",
+      "[750]\ttrain-error:0.012114\teval-error:0.013605\n",
+      "[800]\ttrain-error:0.011908\teval-error:0.013519\n",
+      "[850]\ttrain-error:0.011777\teval-error:0.013472\n",
+      "[900]\ttrain-error:0.011623\teval-error:0.013433\n",
+      "[950]\ttrain-error:0.011544\teval-error:0.013378\n",
+      "[1000]\ttrain-error:0.011364\teval-error:0.013323\n",
+      "[1050]\ttrain-error:0.011199\teval-error:0.013299\n",
+      "[1100]\ttrain-error:0.011097\teval-error:0.013299\n"
      ]
     }
    ],
@@ -712,6 +732,7 @@
     "                         ,for_sale.zipcode.values\n",
     "                         ,as_ypred_mean\n",
     "                         ,gs_ypred_mean\n",
+    "                         ,as_ypred_mean / gs_ypred_mean\n",
     "                         ,for_sale.price.values\n",
     "                         ,for_sale['origin_url'].values\n",
     "                         ,for_sale.latitude.values\n",
@@ -719,8 +740,8 @@
     "                         ,for_sale.date_listed.apply(lambda x: x.strftime('%Y-%m-%d')).values\n",
     "                         ,for_sale.date_transacted_latest.values))\n",
     "index = pd.MultiIndex.from_tuples(for_sale.index.values, names=['property_id', 'transaction_id'])\n",
-    "output = pd.DataFrame(values[:,2:],index=index,columns=['address', 'zipcode','any_sell', 'good_sell', 'list', 'url', 'lat', 'long', 'date_listed', 'transaction_date']) \\\n",
-    "            .sort_values(by='good_sell',ascending=False) \\\n",
+    "output = pd.DataFrame(values[:,2:],index=index,columns=['address', 'zipcode','any_sell', 'good_sell','bayesian', 'list', 'url', 'lat', 'long', 'date_listed', 'transaction_date']) \\\n",
+    "            .sort_values(by='bayesian',ascending=False) \\\n",
     "            .drop_duplicates()\n",
     "\n",
     "file = csv_path + 'good_sell/gs_target_list_' + today.strftime('%Y%m%d') + '.csv'\n",
